feat: added logic to update the private notice by adding the contract self-description on the private notice models feat: updated doc
